[metadata]
name = CARE_GNN
version = 0.0.1
author = Hazem Elmahy
author_email = hazemelmahy23@gmail.com
description = GNN for fraud detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HazemElmahy/GNN_CARE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
